2010-09-12  Robert Larice
 * src/main.c :
    fix incorrect buffer type, and exit(1) on failure to open a tempfile

2010-09-08 Holger Vogt
 * inp.c, inpcom.c: include libiberty.h removed
 * terminal.c, ivars.c, ifnewuid.c, inperror.c, tclspice.c, main.c:
   rework of #ifdef HAVE_ASPRINTF ...
 * fteparse.h: #undef AND /* obsolete macro in ansidecl.h */ added

2010-09-08  Robert Larice
 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c :
    fix commit from today, `function rename, Arc() -> DevDrawArc()`

2010-09-08  Robert Larice
 * src/include/const.h :
    rename include file wrapper, #ifndef CONST  ->  CONST_H

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/include/ftedev.h :
    function rename, struct DISPDEVICE . Text() -> DrawText()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/include/ftedev.h :
    function rename, struct DISPDEVICE . Arc() -> DrawArc()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :
    function rename, Update() -> DevUpdate()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :
    function rename, DrawLine() -> DevDrawLine()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c ,
 * src/frontend/plotting/x11.c :
    function rename, Text() -> DevDrawText()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/grid.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c :
    function rename, Arc() -> DevDrawArc()

2010-09-08  Robert Larice
 * README.adms ,
 * autogen.sh ,
 * configure.ac ,
 * configure.in ,
 * src/frontend/cpitf.c ,
 * src/misc/ivars.c :
    rename configure.in -> configure.ac

2010-09-08 Holger Vogt